--- a/src/renderer/style.css
+++ b/src/renderer/style.css
@@ -69,11 +69,16 @@ button:focus-visible {
 }
 
 #app {
-  max-width: 1280px;
+  /* max-width: 1280px; */
+  width: 100%;
   margin: 0 auto;
   padding: 0rem;
   padding-bottom: 0%;
   text-align: center;
+  /* overflow: hidden;  */
+  /* 不让滚动条把布局撑开 */
+  height: 90% ;
+
 }
 
 @media (prefers-color-scheme: light) {
